# shop_tq

./: .dockerignore  .env.sample  Dockerfile  FIRST_TASK_TESTOVOE.py  README.md  docker-compose.yaml  pyproject.toml
cart/: admin.py  api_views.py  models.py  urls.py
cart/migrations/: 0001_initial.py
cart/serializers/: cart_item.py  shopping_cart.py
categories/: admin.py  api_views.py  models.py  paginators.py  urls.py
categories/migrations/: 0001_initial.py
categories/serializers/: category.py  sub_category.py
config/: settings.py  urls.py
locale/ru/LC_MESSAGES/: django.po
products/: admin.py  api_views.py  models.py  paginator.py  serializers.py  urls.py
products/migrations/: 0001_initial.py
users/: admin.py  api_views.py  models.py  serializers.py  urls.py
users/management/commands/: csu.py
users/migrations/: 0001_initial.py
